# sharkguto.github.io

./: CNAME  README.md  app.py  deploy-flet.sh  deploy.sh  flutter_bootstrap.js  flutter_service_worker.js  index-old.html  index.html  main.py  manifest.json  pyscript.toml  requirements.txt
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
css/: app.1ce24a0d.css  app.1d84d741.css  app.3697acfa.css  app.6120e1e7.css  app.a7d54101.css  app.b9cf8beb.css  app.e9e855b9.css  app.ef83c4b2.css
flet-gmftech/: README.md  app.py  main.py  new2.py  pyproject.toml  requirements.txt
flet-gmftech/pages/: about.py  coins.py  contact.py  home.py  services.py
gmftech/: LICENSE  pyproject.toml
js/: about.07ad301e.js  about.07ad301e.js.map  about.0cecfdfe.js  about.0cecfdfe.js.map  about.41314c9b.js  about.41314c9b.js.map  about.66ae824f.js  about.66ae824f.js.map  about.963ca871.js  about.963ca871.js.map  about.9d033e51.js  about.9d033e51.js.map  about.dc0800a2.js  about.dc0800a2.js.map  app.2cc5b281.js  app.2cc5b281.js.map  app.3e6a793c.js.map  app.4d1974c0.js  app.4d1974c0.js.map  app.553111eb.js  app.553111eb.js.map  app.5aa54209.js  app.5aa54209.js.map  app.5f43bcfa.js  app.5f43bcfa.js.map  app.63f1553a.js  app.63f1553a.js.map  app.760577f9.js  app.760577f9.js.map  app.8160bde7.js  app.8160bde7.js.map  app.9e456a41.js  app.9e456a41.js.map  app.b495c378.js  app.b495c378.js.map  app.cf7f0139.js  app.cf7f0139.js.map  app.f01d63a1.js  app.f01d63a1.js.map  chunk-vendors.14900559.js.map  (+14 more)
old-html/: briefcase.toml  main.py  pyscript.toml  requirements.txt
(+58 files in other folders)
